# msd_robot_arm_rev4

arm_motor_controller/: CMakeLists.txt  package.xml
arm_motor_controller/config/: spotarm.urdf.xacro  spotarm_controllers.yaml
bringup/config/: spotarm_controllers.yaml
marge/: README.md
marge/src/: ICLStepper.cpp
robot_bringup/: README.md
robot_bringup/launch/: robot.launch.py
robot_commander/: CMakeLists.txt  package.xml
robot_commander/launch/: robot_commander.launch.py
robot_commander/src/: commander.cpp
robot_hardware/: CMakeLists.txt  README.md  package.xml  robot_hardware_plugin.xml
robot_hardware/include/robot_hardware/: ICLStepper.h  arm_hardware_interface.hpp
robot_hardware/src/: ICLStepper.cpp  arm_hardware_interface.cpp
robot_moveit_config/: .setup_assistant  README.md  package.xml
robot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  spotarm_assembly.ros2_control.xacro  spotarm_assembly.srdf
robot_servoing/: CMakeLists.txt  README.md  package.xml
robot_servoing/config/: robot_simulated_config.yaml
robot_servoing/launch/: servo.launch.py
robot_servoing/src/: my_gamepad_to_servo_node.cpp
robot_status_leds/: README.md  package.xml  setup.cfg  setup.py
robot_status_leds/robot_status_leds/: led_controller.py  led_state_node.py
spotarm_assembly_description/: README.md
spotarm_assembly_description/urdf/: spotarm_assembly.gazebo  spotarm_assembly.trans  spotarm_assembly.urdf  spotarm_assembly.xacro
stepper_test/include/stepper_test/: ICLStepper.h
stepper_test/src/: ICLStepper.cpp  motor_key.cpp
